--- a/index.html
+++ b/index.html
@@ -92,17 +92,14 @@
       </div>
     </div>
   </section>
-
-  <section class="phone" >
+  <section class="phone" id="phone">
       <h2>Готовьтесь к 17 заданию даже на мобильном устройстве!</h2>
       <div class="phone__container">
         <img class="phone__item phone__item1" src="img\main\phone1.png" alt="">
         <img class="phone__item phone__item2" src="img\main\phone2.png" alt="">
         <img class="phone__item phone__item3" src="img\main\phone3.png" alt="">
-
       </div>
   </section>
-
   <section class="opportunities">
     <div class="container">
       <div class="opportunities__item">
