--- a/#src/index.html
+++ b/#src/index.html
@@ -22,12 +22,9 @@
         <p>Разбор 17 задачи, используя монотонность, графический метод или исследованием
           дискриминанта </p>
       </div>
+
     </div>
   </main>
-  <script  src="js\script.min.js"></script>
-</body>
-</html>
-
   <section class="difficulty">
     <div class="container">
       <article class="difficulty__item">
@@ -134,5 +131,7 @@
       }
       getUsers()
     </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
   </body>
 </html>
